# rubiks_cube_sover

./: AbstractRubiksCube.cpp  AbstractRubiksCube.h  CMakeLists.txt  RubiksCube1DArrayModel.cpp  RubiksCube3DArrayModel.cpp  RubiksCubeBitboardModel.cpp  main.cpp
Models/: RubiksCube1DArrayModel.cpp  RubiksCubeBitboardModel.cpp
PatternDatabases/: CornerDatabaseMaker.cpp  CornerDatabaseMaker.h  CornerPatternDatabase.cpp  CornerPatternDatabase.h  Math.cpp  Math.h  NibbleArray.cpp  NibbleArray.h  PatternDatabase.cpp  PatternDatabase.h  PermutationIndexer.h
Solvers/: BFSSolver.h  DFSSolver.h  IDAStarSolver.h  IDDFSSolver.h
